<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/productName"
            android:text="@string/product_name"
            android:textColor="?android:attr/textColorPrimary"
            style="@android:style/Widget.Material.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productImage"
            android:padding="8dp" />

        <RatingBar
            android:id="@+id/productRatingBar"
            style="@android:style/Widget.Material.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productName"
            android:isIndicator="true"
            android:numStars="5"
            android:layout_marginStart="8dp"
            android:progressTint="#FFC107" />

        <TextView
            android:id="@+id/productDescription"
            android:text="@string/description"
            style="@android:style/Widget.Material.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productRatingBar"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/productPrice"
            android:text="@string/default_price"
            android:textColor="@color/design_default_color_secondary"
            style="@android:style/Widget.Material.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/productAddToCart"
            android:text="@string/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productPrice"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>